--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "cookie-parser": "^1.4.3",
     "cross-spawn": "^6.0.5",
     "del": "^3.0.0",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.2.0",
     "express": "4.16.3",
     "express-session": "^1.13.0",
     "express-writer": "0.0.4",
@@ -39,9 +39,12 @@
     "marked": "^0.4.0",
     "notifications-node-client": "^4.1.0",
     "nunjucks": "^3.1.3",
+    "pg-hstore": "^2.3.3",
     "portscanner": "^2.1.1",
     "prompt": "^1.0.0",
     "require-dir": "^1.0.0",
+    "sequelize": "^5.9.0",
+    "sequelize-heroku": "^2.1.0",
     "sync-request": "^6.0.0",
     "universal-analytics": "^0.4.16",
     "uuid": "^3.2.1"
