--- a/server/config/config.json
+++ b/server/config/config.json
@@ -1,6 +1,10 @@
 {
   "development": {
     "use_env_variable": "DATABASE_URL",
+    "dialect": "postgres"
+  },
+  "production": {
+    "use_env_variable": "DATABASE_URL",
     "dialect": "postgres",
     "dialectOptions": {
       "ssl": true
